--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "file-loader": "1.1.5",
     "fs-extra": "3.0.1",
     "html-webpack-plugin": "2.29.0",
+    "immutable": "^3.8.2",
     "jest": "20.0.4",
     "js-cookie": "^2.2.0",
     "md5": "^2.2.1",
